wip: shader loading from text works

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,6 @@ if (PROGRESSION_BUILD_EXAMPLES)
     #set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT demo)
 endif()
 
-if (PROGRESSION_BUILD_TOOLS)
-    add_subdirectory(tools/)
-endif()
+#if (PROGRESSION_BUILD_TOOLS)
+#    add_subdirectory(tools/)
+#endif()
