feat: added in very basic resource manager

--- a/progression/CMakeLists.txt
+++ b/progression/CMakeLists.txt
@@ -33,10 +33,11 @@ set(
     #graphics/shadow_map.cpp
     graphics/graphics_api.cpp
 
-    #resource/resource_manager.cpp
+    resource/resource_manager.cpp
     resource/image.cpp
     resource/material.cpp
     resource/mesh.cpp
+    resource/model.cpp
     resource/shader.cpp
     resource/texture2D.cpp
 
@@ -44,6 +45,7 @@ set(
     resource/resourceIO/shader_io.cpp
     resource/resourceIO/texture_io.cpp
     resource/resourceIO/model_io.cpp
+    resource/resourceIO/material_io.cpp
 
     #components/user_camera_component.cpp
 
@@ -80,7 +82,7 @@ set(
     #graphics/shadow_map.hpp
     graphics/graphics_api.hpp
 
-    #resource/resource_manager.hpp
+    resource/resource_manager.hpp
     resource/image.hpp
     resource/material.hpp
     resource/mesh.hpp
@@ -92,6 +94,7 @@ set(
     resource/resourceIO/shader_io.hpp
     resource/resourceIO/texture_io.hpp
     resource/resourceIO/model_io.hpp
+    resource/resourceIO/material_io.hpp
     resource/resourceIO/io.hpp
 
     #components/user_camera_component.hpp
