refactor: Changed ResourceDB and UpdateDB so that no manual resize is needed on initialization or clear. Also changed over all of the fastfile related serialization to use the utility functions

--- a/progression/CMakeLists.txt
+++ b/progression/CMakeLists.txt
@@ -45,6 +45,7 @@ set(
     #components/user_camera_component.cpp
 
     utils/logger.cpp
+    utils/serialize.cpp
 
     ${PROGRESSION_DIR}/ext/tinyobjloader/tiny_obj_loader.cc
     ${PROGRESSION_DIR}/ext/memory_map/MemoryMapped.cpp    
@@ -88,6 +89,7 @@ set(
 
     #components/user_camera_component.hpp
     
+    utils/serialize.hpp
     utils/noncopyable.hpp
     utils/logger.hpp
     utils/random.hpp
