feat: LZ4 compression working (commented out right now). Slower for current filesizes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ set(GLFW_BUILD_DOCS      OFF CACHE BOOL " " FORCE)
 
 add_subdirectory(ext/glfw)
 add_subdirectory(ext/meshoptimizer)
+add_subdirectory(ext/lz4)
 
 add_subdirectory(progression)
 
