fix: renamed the configuration.hpp to platform_defines, going to add to it which platform is running. Fixing git mistake with lz4

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,10 @@ build_debug/
 *.swp
 a.out
 progression/core/configuration.hpp
-*.ff
 resources/sponza
 resources/cache
+resources/fastfiles
+.vscode/
 
 # Prerequisites
 *.d
