feat: added using_defines, and platform_defines which are detected by cmake

--- a/cmake/platform_defines.hpp.in
+++ b/cmake/platform_defines.hpp.in
@@ -1,4 +1,15 @@
 #pragma once
 
+/*
+ * This is a generated file from cmake/platform_defines.hpp.in. This will be overwritten whenever
+ * cmake is run again, careful when editing.
+ */
+
+#include "core/using_defines.hpp"
+
 #define PG_ROOT_DIR "${PROGRESSION_DIR}/"
 #define PG_RESOURCE_DIR "${PROGRESSION_DIR}/resources/"
+
+#define LINUX_PROGRAM   ${LINUX_PROGRAM}
+#define WINDOWS_PROGRAM ${WINDOWS_PROGRAM}
+#define APPLE_PROGRAM   ${APPLE_PROGRAM}
