feat: got rid of errors and warnings on windows. Also fixed several bugs: FFI files were opened as txt files when dumping them into fastfiles. AABB for models and meshes was calculated incorrectly. The renderpass's move constructor was not getting all of the fields. Also fixed up the using defines and added feature_defines

--- a/ext/lz4/CMakeLists.txt
+++ b/ext/lz4/CMakeLists.txt
@@ -16,8 +16,8 @@ set(
     xxhash.h 
 )
 
-if(MSVC)
-    target_compile_options(progression PRIVATE "/MP")
-endif()
-
 add_library(lz4 STATIC ${SRCS} ${HEADERS})
+
+if(MSVC)
+    target_compile_options(lz4 PRIVATE "/MP")
+endif()
