fix: Cmake TRANSFORM for the prepending is 3.12.4+, changed the algorithm to a more compatible solution, and fixed a few compilation issues for linux

--- a/progression/CMakeLists.txt
+++ b/progression/CMakeLists.txt
@@ -140,7 +140,14 @@ set(
 	${OTHER}
 )
 
-list(TRANSFORM ALL_FILES PREPEND ${CMAKE_CURRENT_SOURCE_DIR}/)
+# Needs cmake 3.12.4
+#list(TRANSFORM ALL_FILES PREPEND ${CMAKE_CURRENT_SOURCE_DIR}/)
+
+SET(listVar "")
+FOREACH(f ${ALL_FILES})
+    LIST(APPEND listVar "${CMAKE_CURRENT_SOURCE_DIR}/${f}")
+ENDFOREACH(f)
+set(ALL_FILES ${listVar})
 
 source_group(TREE ${CMAKE_SOURCE_DIR} FILES ${ALL_FILES})
 
