trying CI again

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,10 @@ compiler:
 
 dist: bionic
 
-addons:
-  apt:
-    sources:
-    - ubuntu-toolchain-r-test
-    packages:
-      - g++-9
+before_install:
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+  - sudo apt-get update -q
+  - sudo apt-get install gcc-9 -y
 
 install:
 - "[ $CXX = g++ ] && export CXX=g++-9 || true"
