feat: added the 'Ship' configuration for building. Has highest optimizations and does not log or assert anything. Also refactored the asserts out, and added an assert w/msg macro

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,10 @@ script:
   - gcc -v && g++ -v && cmake --version
   - mkdir build
   - cd build
-  - cmake -DCMAKE_BUILD_TYPE=Release ..
+  - cmake -DCMAKE_BUILD_TYPE=Debug ..
+  - make -j
+  - cd ..
+  - mkdir build_ship
+  - cd build_ship
+  - cmake -DCMAKE_BUILD_TYPE=Ship ..
   - make -j
