--- a/cmake/platform_defines.hpp.in
+++ b/cmake/platform_defines.hpp.in
@@ -13,3 +13,23 @@
 #define LINUX_PROGRAM   ${LINUX_PROGRAM}
 #define WINDOWS_PROGRAM ${WINDOWS_PROGRAM}
 #define APPLE_PROGRAM   ${APPLE_PROGRAM}
+
+
+#ifdef CMAKE_DEFINE_DEBUG_BUILD
+#define DEBUG_BUILD IN_USE
+#else
+#define DEBUG_BUILD NOT_IN_USE
+#endif
+
+#ifdef CMAKE_DEFINE_RELEASE_BUILD
+#define RELEASE_BUILD IN_USE
+#else
+#define RELEASE_BUILD NOT_IN_USE
+#endif
+
+#ifdef CMAKE_DEFINE_SHIP_BUILD
+#define SHIP_BUILD IN_USE
+#else
+#define SHIP_BUILD NOT_IN_USE
+#endif
+
