--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,8 @@ image: Visual Studio 2017
 platform:
   - x64
 configuration:
-  - Release
+  - Debug
+  - Ship
 
 install:
   - git submodule update --init --recursive
