refactor: Tried to get rid of unnecessary #includes, and got rid of the big common.hpp file. Only reduced compile time by ~5% though.

--- a/cmake/platform_defines.hpp.in
+++ b/cmake/platform_defines.hpp.in
@@ -5,7 +5,7 @@
  * cmake is run again, careful when editing.
  */
 
-#include "core/using_defines.hpp"
+#include "core/core_defines.hpp"
 
 #define PG_ROOT_DIR "${PROGRESSION_DIR}/"
 #define PG_RESOURCE_DIR "${PROGRESSION_DIR}/resources/"
