--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ext/glfw"]
 	path = ext/glfw
 	url = https://github.com/glfw/glfw.git
+[submodule "ext/SPIRV-Reflect"]
+	path = ext/SPIRV-Reflect
+	url = https://github.com/chaoticbob/SPIRV-Reflect.git
