--- a/progression/CMakeLists.txt
+++ b/progression/CMakeLists.txt
@@ -58,6 +58,7 @@ set(
     core/config.hpp
     core/core_defines.hpp
     core/ecs.hpp
+    core/enum_bit_operations.hpp
     core/frustum.hpp
     core/feature_defines.hpp
     core/input.hpp
