--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ext/SPIRV-Reflect"]
 	path = ext/SPIRV-Reflect
 	url = https://github.com/chaoticbob/SPIRV-Reflect.git
+[submodule "ext/entt"]
+	path = ext/entt
+	url = https://github.com/skypjack/entt.git
