--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,8 +87,8 @@ if (UNIX AND NOT APPLE)
     add_definitions( -DLUA_USE_POSIX )
 endif()
 file(GLOB_RECURSE LUA_SRC ext/lua/*.c)
-list(REMOVE_ITEM LUA_SRC "ext/lua/lua.c")
-list(REMOVE_ITEM LUA_SRC "ext/lua/luac.c")
+list(REMOVE_ITEM LUA_SRC "${CMAKE_SOURCE_DIR}/ext/lua/lua.c")
+list(REMOVE_ITEM LUA_SRC "${CMAKE_SOURCE_DIR}/ext/lua/luac.c")
 add_library(lua ${LUA_SRC})
 
 add_subdirectory(ext/meshoptimizer)
