--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,15 +1,15 @@
-include(Progression)
+include( Progression )
 
-add_executable(example example.cpp)
-add_executable(luaExample luaExample.cpp)
+add_executable( sceneViewer sceneViewer.cpp)
+#add_executable( luaExample luaExample.cpp )
 
 set_target_properties(
-    example luaExample
+    sceneViewer #luaExample
     PROPERTIES
     DEBUG_POSTFIX _debug
 )
 
-set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT example)
+set_property( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT sceneViewer )
 
-target_link_libraries(example ${PROGRESSION_LIBS})
-target_link_libraries(luaExample ${PROGRESSION_LIBS})
+target_link_libraries( sceneViewer ${PROGRESSION_LIBS} )
+#target_link_libraries(luaExample ${PROGRESSION_LIBS})
