feat: got array of textures working, but FPS drops a lot with very high texture number

--- a/progression/CMakeLists.txt
+++ b/progression/CMakeLists.txt
@@ -10,12 +10,14 @@ set(
     GRAPHICS
     #graphics/graphics_api.cpp
     graphics/render_system.cpp
+    graphics/texture_manager.cpp
     graphics/vulkan.cpp
 
     graphics/graphics_api.hpp
     graphics/lights.hpp
     graphics/pg_to_vulkan_types.hpp
     graphics/render_system.hpp
+    graphics/texture_manager.hpp
     graphics/vulkan.hpp
     
     graphics/graphics_api/buffer.cpp
