fix: fixed the timesteps, and a couple other bugs. Now almost there, but rotating arm is pointing the wrong way

--- a/progression/CMakeLists.txt
+++ b/progression/CMakeLists.txt
@@ -157,6 +157,7 @@ set(
 
 set(
 	COMPONENTS
+	components/animation_component.hpp
 	components/entity_metadata.hpp
 	components/factory.cpp
 	components/factory.hpp
