feat: Added option for running converter automatically when loading fastfiles. Also reorganized the CMake files to have all files output to bin or lib, with the _debug, _release, or _ship postfix

--- a/cmake/platform_defines.hpp.in
+++ b/cmake/platform_defines.hpp.in
@@ -9,6 +9,7 @@
 
 #define PG_ROOT_DIR "${PROGRESSION_DIR}/"
 #define PG_RESOURCE_DIR "${PROGRESSION_DIR}/resources/"
+#define PG_BIN_DIR "${CMAKE_BINARY_DIR}/bin/"
 
 #define LINUX_PROGRAM   ${LINUX_PROGRAM}
 #define WINDOWS_PROGRAM ${WINDOWS_PROGRAM}
